Primer commit del diseño
Primer commit del diseño

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/desarrolloweb1
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+#spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.port = 8083
+spring.mvc.contentnegotiation.favor-parameter=true
