--- a/src/main/java/application.properties
+++ b/src/main/java/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mariadb://localhost:3307/desarrolloweb1
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_desarrollo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=create
 
