--- a/src/main/java/application.properties
+++ b/src/main/java/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/desarrolloweb1?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_desarrollo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=create
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 
