--- a/src/main/java/application.properties
+++ b/src/main/java/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/proyecto_desarrollo?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_desarrollo?useSSL=false
 #spring.datasource.url=jdbc:mariadb://localhost:3307/proyecto_desarrollo
 spring.datasource.username=root
 spring.datasource.password=root
@@ -6,7 +6,7 @@ spring.datasource.password=root
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 
@@ -15,5 +15,3 @@ spring.servlet.multipart.max-request-size=10MB
 server.port = 8083
 spring.mvc.contentnegotiation.favor-parameter=true
 
-spring.security.user.name=wilson
-spring.security.user.password=1234
