--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,11 @@
     <version>2.5.6</version>
 </dependency>
 
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>mysql</groupId> -->
+<!--       <artifactId>mysql-connector-java</artifactId> -->
+<!--     </dependency> -->
+    
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -80,6 +81,14 @@
     <artifactId>mariadb-java-client</artifactId>
     <version>3.0.0-alpha</version>
 </dependency>
+	
+	
+	
+
+	
+	
+	
+	
 	
  </dependencies>
 
