--- a/src/main/java/application.properties
+++ b/src/main/java/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/proyecto_desarrollo?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3307/proyecto_desarrollo?useSSL=false
 #spring.datasource.url=jdbc:mariadb://localhost:3307/proyecto_desarrollo
+spring.datasource.url=jdbc:mariadb://localhost:3306/proyecto_desarrollo
 spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.password=root
+spring.datasource.password=Loarca123*
 
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 
