--- a/src/main/java/application.properties
+++ b/src/main/java/application.properties
@@ -2,8 +2,8 @@
 #spring.datasource.url=jdbc:mariadb://localhost:3307/proyecto_desarrollo
 spring.datasource.url=jdbc:mariadb://localhost:3306/proyecto_desarrollo
 spring.datasource.username=root
-#spring.datasource.password=root
-spring.datasource.password=Loarca123*
+spring.datasource.password=root
+#spring.datasource.password=Loarca123*
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
